--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,7 +38,7 @@ header {
 
 .contenido-header {
   height: 300px;
-  color: white;
+  color: rgb(15, 15, 15);
   text-align: center;
   padding-top: 100px;
 
@@ -55,7 +55,7 @@ header {
     background-size: 25%;
   }
   50% {
-    background-size: 50;
+    background-size: 50%;
   }
   100% {
     background-size: 100%;
@@ -63,7 +63,7 @@ header {
 }
 .animation-header {
   height: 300px;
-  color: white;
+  color: rgb(12, 12, 12);
   text-align: center;
   padding-top: 100px;
 
@@ -144,7 +144,7 @@ main {
   padding: 20px;
 
   h2 {
-    margin-top: 10px;
+    margin-top: 14px;
     color: #533747;
   }
 
@@ -174,7 +174,7 @@ footer {
 }
 
 form {
-  padding: 130px;
+  padding: 14%;
   background-color: #86bbbd;
   text-align: center;
 
@@ -207,6 +207,10 @@ label {
 
   .card-text {
     font-style: italic;
+    background-color: bisque;
+  }
+  .card-body {
+    background-color: #5f506b;
   }
 }
 
@@ -220,11 +224,6 @@ label {
 .foto1 {
   display: flex;
   flex-direction: row;
-}
-
-.col,
-.row {
-  background-color: #86bbbd;
 }
 
 .nosotros {
@@ -300,7 +299,7 @@ label {
 
   .navbar {
     flex-direction: column;
-    position: unset;
+    position: sticky;
   }
 
   .principal {
